[package]
name = "bitfield"
version = "0.10.0"
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]
license = "MIT OR Apache-2.0"
description = "This project provides macros to generate bitfield-like struct."
repository = "https://github.com/dzamlo/rust-bitfield"
documentation = "https://docs.rs/bitfield"

[dependencies]
