[package]
name = "bitfield"
version = "0.18.0"
edition = "2021"
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]
license = "MIT OR Apache-2.0"
description = "This crate provides macros to generate bitfield-like struct."
repository = "https://github.com/dzamlo/rust-bitfield"
documentation = "https://docs.rs/bitfield"

[dependencies]
bitfield-macros = { version = "0.18.0", path = "bitfield-macros" }

[workspace]

members = [
    "bitfield-macros",
]

